--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">
-                  A very long bridge, over the forest...
+                  A very long bridge, over the forests &
                 </h2>
                 <button type="button" class="card__like-button"></button>
               </div>
@@ -120,7 +120,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer page__section">
+        <p class="footer__copyright">2024 © Alec Davis</p>
+      </footer>
     </div>
   </body>
 </html>
