--- a/index.html
+++ b/index.html
@@ -124,5 +124,6 @@
         <p class="footer__copyright">2024 © Alec Davis</p>
       </footer>
     </div>
+    <script href="./scripts/index.js" defer ></script>
   </body>
 </html>
