--- a/index.html
+++ b/index.html
@@ -125,18 +125,19 @@
       </footer>
       <div class="modal modal__opened">
         <div class="modal__container">
-          <button type="submit" class="modal__close-btn"></button>
+          <button type="submit" class="modal__close-btn">
+          </button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
             <label for="name" class="modal__label">
               Name
               <input id="name" type="text" class="modal__input"
-              placeholder="Name">
+              placeholder="Type your name">
             </label>
             <label for="description" class="modal__label">
               Description
               <input id="description" type="text" class="modal__input"
-              placeholder="Description">
+              placeholder="Describe yourself" >
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
