--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
-          <form name="edit-profile" id="add-card-form" class="modal__form">
+          <form name="add-card" id="add-card-form" class="modal__form">
             <label for="add-card-link-input" class="modal__label">
               Image link
               <input
@@ -116,6 +116,16 @@
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
+        </div>
+      </div>
+      <div class="modal" id="preview-modal">
+        <div class="modal__content modal__content_type_preview">
+          <button
+            type="button"
+            class="modal__close-btn modal__close-btn_type_preview"
+          ></button>
+          <img class="modal__image" src="" alt="" />
+          <p class="modal__caption"></p>
         </div>
       </div>
     </div>
