--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit Profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form novalidate name="edit-profile" class="modal__form">
             <label for="profile-name-input" class="modal__label">
               Name
               <input
@@ -104,7 +104,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
-          <form name="add-card" id="add-card-form" class="modal__form">
+          <form novalidate name="add-card" id="add-card-form" class="modal__form">
             <label for="add-card-link-input" class="modal__label">
               Image link
               <input
