--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
-          <form novalidate name="add-card" id="add-card-form" class="modal__form">
+          <form
+            novalidate
+            name="add-card"
+            id="add-card-form"
+            class="modal__form"
+          >
             <label for="add-card-link-input" class="modal__label">
               Image link
               <input
