Added more API support and Edit Avatar Modal

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,20 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img id="image-avatar" alt="Bessie Coleman" class="profile__avatar" />
+          <div class="profile__avatar-container">
+            <button class="profile__avatar-btn">
+              <img
+                id="image-avatarPencil"
+                alt="Pencil Icon"
+                class="profile__pencil-icon"
+              />
+            </button>
+            <img
+              id="image-avatar"
+              alt="Bessie Coleman"
+              class="profile__avatar"
+            />
+          </div>
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
@@ -140,6 +153,32 @@
           ></button>
           <img class="modal__image" src="" alt="" />
           <p class="modal__caption"></p>
+        </div>
+      </div>
+      <div class="modal" id="avatar-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__title">Edit Profile Avatar</h2>
+          <form
+            novalidate
+            name="edit-avatar"
+            class="modal__form"
+            id="edit-avatar-form"
+          >
+            <label for="profile-avatar-input" class="modal__label">
+              Profile Picture
+              <input
+                id="profile-avatar-input"
+                name="avatar"
+                type="url"
+                class="modal__input"
+                placeholder="Paste the link to an image"
+                required
+              />
+              <span id="profile-avatar-input-error" class="modal__error"></span>
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
         </div>
       </div>
     </div>
